# s3cpp

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: benchmark.yml
benchmark/: Makefile  README.md  benchmark.cpp  implementations.h  main.cpp  task.cpp  tasks.h  test.cpp
benchmark/aws-sdk-cpp/: compile_flags.txt  task.cpp
benchmark/aws-sdk-go-v2/: go.mod  go.sum  main.go
benchmark/aws-sdk-rust/: Cargo.toml
benchmark/aws-sdk-rust/src/: lib.rs
benchmark/s3cpp/: task.cpp  task.h
docs/adr/: 0001-streaming-file-upload-and-custom-endpoints.md
include/: module.modulemap  s3api.h
src/s3cpp/: auth.cpp  auth.h  compat_expected.h  compat_format.h  httpclient.cpp  httpclient.h  s3.cpp  s3.h  s3api.cpp  types.h  xml.hpp
test/: auth_test.cpp  aws_test.cpp  httpclient_test.cpp  s3_test.cpp  xml_test.cpp
