[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2.14", features = ["hardcoded-credentials"] }
aws-sdk-s3 = { version = "1.127.0", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["cdylib"]
